2007-03-30 Fixed a bug in backend_qt4, reported on mpl-dev - DSD

2007-03-26 Removed colorbar_classic from figure.py; fixed bug in
           Figure.clf() in which _axobservers was not getting
           cleared.  Modernization and cleanups. - EF

2007-03-26 Refactored some of the units support -- units now live in
           the respective x and y Axis instances.  See also
           API_CHANGES for some alterations to the conversion
           interface.  JDH

2007-03-25 Fix masked array handling in quiver.py for numpy. (Numeric
           and numarray support for masked arrays is broken in other
           ways when using quiver. I didn't pursue that.) - ADS

2007-03-23 Made font_manager.py close opened files. - JKS

2007-03-22 Made imshow default extent match matshow - EF

2007-03-22 Some more niceties for xcorr -- a maxlags option, normed
           now works for xcorr as well as axorr, usevlines is
           supported, and a zero correlation hline is added.  See
           examples/xcorr_demo.py.  Thanks Sameer for the patch.  -
           JDH

2007-03-21 Axes.vlines and Axes.hlines now create and returns a
           LineCollection, not a list of lines.  This is much faster.
           The kwarg signature has changed, so consult the docs.
           Modified Axes.errorbar which uses vlines and hlines.  See
           API_CHANGES; the return signature for these three functions
           is now different

2007-03-20 Refactored units support and added new examples - JDH

2007-03-19 Added Mike's units patch - JDH

2007-03-18 Matshow as an Axes method; test version matshow1() in
           pylab; added 'integer' Boolean kwarg to MaxNLocator
           initializer to force ticks at integer locations. - EF

2007-03-17 Preliminary support for clipping to paths agg - JDH

2007-03-17 Text.set_text() accepts anything convertible with '%s' - EF

2007-03-14 Add masked-array support to hist. - EF

2007-03-03 Change barh to take a kwargs dict and pass it to bar.